# lumoscribe2026

./: .cursorignore  .env.example  .gitignore  00-目录说明.md  AGENTS.md  QUICKSTART.md  README.md  git-config-files.md  git-strategy.md  package-lock.json  package.json  pyproject.toml  vmind_preview.html
.cursor/: 00-目录说明.md
.cursor/rules/: change-manager.mdc  code-review.mdc  constitution.mdc  debug-diagnostic.mdc  directory-structure.mdc  git-manager.mdc  plan-creator.mdc  prompt-management.mdc  skills.mdc  spec-generator.mdc  task-breakdown.mdc
.cursor/specs/: PATHWAY.md  prompt-management-standards.md
.cursor/templates/: INDEX.md  Plan-template.md  Project-template.md  debug-template.md  directory-readme.md
.roo/: 00-目录说明.md
.roo/rules/: 01-constitution.md  02-agents.md  directory-structure.md
.roo/skills/: README.md
.roo/templates/: change-template.md  spec-template.md  tasks-template.md
.trae/: 00-目录说明.md
.trae/documents/: ai-doc-platform-phase2-阶段4-中台LLM并发与Prompt管理增强-实施方案.md  内容生成与检索架构质量提升评估与重构计划.md  完成 ai-doc-platform-phase2 阶段5 任务.md  用 LlamaIndex 落地 Path B（Recursive Retrieval + Chroma 检索 + Rerank）.md  结构化升级：章节生成与表格对象化（兼容非结构化模型）.md
.trae/rules/: change-manager.md  code-review.md  constitution.md  debug-diagnostic.md  directory-structure.md  git-manager.md  plan-creator.md  prompt-management.md  spec-generator.md  task-breakdown.md
.trae/specs/: 00-目录说明.md
data/: 00-目录说明.md
docs/: 00-目录说明.md
docs/guides/: 00-目录说明.md  提示词管理规范.md
docs/process/: 00-目录说明.md
docs/reference/: 00-目录说明.md  项目规范脚手架架构文档.md
scripts/: 00-目录说明.md  check-llm-config.py  check-models.py  check-providers.py  check_cleaning_data.py  check_db.py  check_db_config.py  check_kb_status.py  check_mineru.py  clean_cleaned_docs.py  clean_mineru_data.py  clean_pic_to_json.py  cleanup-default-models.py  debug_hybrid_search.py  debug_mineru_db.py  init-db.py  seed_mineru.py  sync-skills.cmd  sync-skills.ps1  t094-pic-to-json.py  t095-reset-kb.py  t097-clean-intermediates.py  t201-whitepaper-baseline.py  t202-chart-json-html-mapping.py  t225-whitepaper-perf.py  update-chart-extraction-callsite.py  update-chart-extraction-prompt.py  update-doc-cleaning-prompt.py  verify-db.py  vmind_demo.mjs
scripts/antv/: 00-目录说明.md  render.mjs
speckit/: 00-目录说明.md  constitution.md
speckit/skills/: README.md
speckit/specs/: 00-目录说明.md  PATHWAY.md
speckit/templates/: INDEX.md  Project-template.md  spec-template.md
src/: 00-目录说明.md  __init__.py
src/application/: 00-目录说明.md  __init__.py
src/domain/: 00-目录说明.md  __init__.py
src/interfaces/: 00-目录说明.md  __init__.py
src/lumoscribe2026.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/shared/: 00-目录说明.md  __init__.py  config.py  db.py  errors.py  logging.py  request_id.py  storage.py
temp_extract_test/: fee85cb1-4d55-4c64-bd14-fcfca20d70d0_content_list.json  full.md  layout.json
tests/: 00-目录说明.md  conftest.py  test-outline-llm-polish.py  test-outline-recognition.py  test_antv_spec_mapper_unit.py  test_api_basic.py  test_arch_refactor_utils.py  test_chart_anchor_placement_unit.py  test_chart_anchor_postprocessor_unit.py  test_chunking_table_atomic_unit.py  test_content_generation.py  test_document_cleaning.py  test_knowledge_base.py  test_llm_config_api.py  test_llm_thinking_mode.py  test_mineru_cleaning.py  test_outline_polish.py  test_rag_dedup_unit.py  test_sankey_cycle_fallback.py  test_table_formatter_unit.py
(+226 files in other folders)
