[project]
name = "lumoscribe2026"
version = "0.1.0"
description = "面向 AI 的文档生成平台（第一阶段）"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "python-json-logger>=2.0",
    "httpx>=0.28",
    "pytest>=8.0",
    "celery[redis]>=5.4",
    "redis>=5.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
